Fix line spacing below banner image

--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -3,7 +3,7 @@ $tablet: 768px;
 $desktop: 1200px;
 
 #gatsby-focus-wrapper {
-  border: 1 px solid white;
+  border: 1px solid white;
   margin: 0 auto;
   padding: 0;
 }
@@ -11,7 +11,7 @@ $desktop: 1200px;
 .about-flex-container {
   display: flex;
   justify-content: space-between;
-  margin: 20px 0 70px 0;
+  margin: 3rem 0 70px 0;
   @media screen and (max-width: $phone) {
     flex-direction: column;
   }
